# substack-audio

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docs_hostinger_n8n.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/workflows/: podcast.yml
commands/: podcast-episode.md  setup.md
data/: episodes.json  state.json
docs/: n8n-hostinger-flow.md
openspec/: config.yaml
openspec/specs/article-fetching/: spec.md
openspec/specs/audio-generation/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/feed-management/: spec.md
openspec/specs/narrative-generation/: spec.md
openspec/specs/plugin-setup/: spec.md
output/public/: feed.xml
scripts/: substack_to_spotify.py
skills/narrative-writer/: SKILL.md
substack_audio/: __init__.py  cli.py  config.py  feed.py  fetch.py  mcp_server.py  parse.py  tts.py  util.py
